# SaidAndDone

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  store.ts  theme.ts
frontend/src/components/: Home.module.css  Home.tsx
frontend/src/components/journal/: Entries.tsx  JournalViewPage.module.css  JournalViewPage.tsx
frontend/src/components/plan/: Plan.tsx
frontend/src/components/record/: DoneStep.tsx  EditMarkdown.tsx  EditTranscription.tsx  EntryStepper.tsx  JournalDatePicker.tsx  JournalWorkflow.tsx  LoadingStep.tsx  RecordingStep.tsx
frontend/src/router/: router.tsx
src/audio/: __init__.py  recorder.py
src/backend/api/: api.py  deps.py  payloads.py
src/backend/audio/: __init__.py  recorder.py
src/backend/journal_llm/: common.py  prompts.py  rag.py  schema.py
src/backend/storage/: __init__.py  common.py  json_storage.py  markdown_storage.py  models.py
src/events/: handler.py  types.py
src/extraction/: extractor.py  schema.py
src/journal_llm/: common.py  prompts.py  rag.py  schema.py
src/storage/: __init__.py  common.py  json_storage.py  markdown_storage.py
src/stt/: transcriber.py
src/ui/: app.py  cli.py
