[project]
name = "saidanddone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=0.3.74",
    "langchain[google-genai]>=0.3.27",
    "numpy>=2.3.2",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "whisper>=1.1.10",
]
